testdata/baselines/reference/submodule/conformance/moduleExportAlias4.errors.txt
bug24024.js(4,16): error TS2339: Property 'D' does not exist on type 'typeof C'.


==== bug24024.js (1 errors) ====
    // #24024
    var wat = require('./bug24024')
    module.exports = class C {}
    module.exports.D = class D { }
                   ~
!!! error TS2339: Property 'D' does not exist on type 'typeof C'.
    